@@ -1,6 +1,7 @@
 ============================================================
 === 2016
 1.8.10alpha
+        Fix bug occuring with empty input sequences
 	Call alifold with /best/ parameters (from perl /and/ c++)
 	Fix locarnate (compatibility to current locarna); add unit test
 
